kubernetes-networks/hw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-service
  namespace: homework
  labels:
    app: hw-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw-service
  template:
    metadata:
      labels:
        app: hw-service
    spec:
      containers:
      - name: hw-service
        image: zagretdinov/hw:0.4
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        livenessProbe:
          tcpSocket: { port: 8000 }
      volumes:
      - name: app
        emptyDir: {}
