kubernetes-networks/hw-svc-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-svc-cip
  namespace: homework
spec:
  selector:
    app: hw-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
