kubernetes-networks/hw-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-svc-lb
  namespace: homework
spec:
  selector:
    app: hw-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
